src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Number_of_Households__c</fullName>
        <label>Number of Households</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_LBB_Households__c</fullName>
        <label>Number of LBB Households</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Office_Employees_at_LE__c</fullName>
        <label>Number of Office Employees at LE</label>
        <picklist>
            <picklistValues>
                <fullName>PAN:KA01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Office_Employees_at_WS__c</fullName>
        <label>Number of Office Employees at WS</label>
        <picklist>
            <picklistValues>
                <fullName>PAN:KA01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:KA99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:KA99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_VSUs__c</fullName>
        <label>Number of VSUs</label>
        <summaryForeignKey>VSU__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Old_Customer_Number_Ella__c</fullName>
        <label>Old Customer Number - Ella</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Customer_Number_Orfa__c</fullName>
        <label>Old Customer Number - Orfa</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Customer_Number__c</fullName>
        <label>Old Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Block__c</fullName>
        <label>Order Block</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <externalId>true</externalId>
        <label>Org ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Name of source system from where thre record originated e.g. PAR</description>
        <label>Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PDK_BE_Cust_Resp_Email__c</fullName>
        <description>Note - Field Label has been changed from &apos;PDK BE Cust Resp Email&apos; to &apos;PN DK Cust Resp Email&apos;</description>
        <label>PN DK Cust Resp Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PDK_BE_Cust_Resp_Name__c</fullName>
        <description>Note - Field Label has been changed from &apos;PDK BE Cust Resp Name&apos; to &apos;PN DK Cust Resp Name&apos;</description>
        <label>PN DK Cust Resp Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_BE_Cust_Resp_Phone__c</fullName>
        <description>Note - Field Label has been changed from &apos;PDK BE Cust Resp Phone&apos; to &apos;PN DK Cust Resp Phone&apos;</description>
        <label>PN DK Cust Resp Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PDK_BE_Cust_Resp_Team__c</fullName>
        <description>Note - Field Label has been changed from &apos;PDK BE Cust Resp Team&apos; to &apos;PN DK Cust Resp Team&apos;</description>
        <label>PN DK Cust Resp Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_BE_Cust_Resp_Title__c</fullName>
        <description>Note - Field Label has been changed from &apos;PDK BE Cust Resp Title&apos; to &apos;PN DK Cust Resp Title&apos;</description>
        <label>PN DK Cust Resp Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_BE_Customer_Service_Segment__c</fullName>
        <label>PDK BE Customer Service Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_BE_Sales_Mode__c</fullName>
        <label>PDK BE Sales Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_BE_Sub_Segment__c</fullName>
        <label>PDK BE Sub Segment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_BE_Top_Segment__c</fullName>
        <label>PDK BE Top Segment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_BE_custom_call_interval__c</fullName>
        <label>PDK BE custom call interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDK_LO_Cust_Resp_Email__c</fullName>
        <label>PDK LO Cust Resp Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PDK_LO_Cust_Resp_Name__c</fullName>
        <label>PDK LO Cust Resp Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_LO_Cust_Resp_Phone__c</fullName>
        <label>PDK LO Cust Resp Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PDK_LO_Cust_Resp_Team__c</fullName>
        <label>PDK LO Cust Resp Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_LO_Cust_Resp_Title__c</fullName>
        <label>PDK LO Cust Resp Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_LO_Customer_Service_Segment__c</fullName>
        <label>PDK LO Customer Service Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_LO_Sales_Mode__c</fullName>
        <label>PDK LO Sales Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_LO_Sub_Segment__c</fullName>
        <label>PDK LO Sub Segment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_LO_Top_Segment__c</fullName>
        <label>PDK LO Top Segment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_LO_custom_call_interval__c</fullName>
        <label>PDK LO custom call interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PNCM_Account_Relationship_ID__c</fullName>
        <description>This field is used to connect the LE and WS that are coming in from PAR. It hold the PAR ID of the LE on the WS.</description>
        <label>PNCM Account Relationship ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNCM_ID__c</fullName>
        <label>PNCM ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNCM_Parent_ID__c</fullName>
        <label>PNCM Parent ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_DK_Survey_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN DK Survey Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Email_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Email Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Internal_Contact_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Internal Contact Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Mail_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Mail Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Mark_As_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN_Mark_As_Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Phone_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Phone Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_SMS_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN SMS Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_ErrorReasonCode__c</fullName>
        <label>PN Synchronization ErrorReasonCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronization Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSTLZ__c</fullName>
        <label>PSTLZ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Corporate_Registration_Number__c</fullName>
        <description>The registration number for the Parent.</description>
        <label>Parent Corporate Registration Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Legal_Name__c</fullName>
        <description>The name of the Parent.</description>
        <label>Parent Legal Name</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Registration_Country__c</fullName>
        <description>The country registered by the Parent</description>
        <label>Parent Registration Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostNord_Responsible__c</fullName>
        <label>PostNord Responsible</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_C_O__c</fullName>
        <label>Postal Address C/O</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_City__c</fullName>
        <label>Postal Address City</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_Country__c</fullName>
        <label>Postal Address Country</label>
        <picklist>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Address_House_Letter__c</fullName>
        <description>The house letter of the postal address.</description>
        <label>Postal Address House Letter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_House_Number_Supplement__c</fullName>
        <label>Postal Address Floor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_House_Number__c</fullName>
        <label>Postal Address House Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_PO_Box__c</fullName>
        <label>Postal Address PO Box</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_Postal_Code__c</fullName>
        <label>Postal Address Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_Room_Number__c</fullName>
        <label>Postal Address Room Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_Street__c</fullName>
        <label>Postal Address Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_Suburb__c</fullName>
        <label>Postal Address Suburb</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Services__c</fullName>
        <label>Postal Services</label>
        <picklist>
            <picklistValues>
                <fullName>Letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letters and Parcels</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Posttidningsnamn__c</fullName>
        <label>Posttidningsnamn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_Attorney_for_Direct_Debit__c</fullName>
        <label>Power of Attorney for Direct Debit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_as_Integration_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Force account triggers to process records as an integration user. For use by custom code only.</description>
        <inlineHelpText>Force account triggers to process records as an integration user. For use by custom code only.</inlineHelpText>
        <label>Process as Integration User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Whitespace_Counter__c</fullName>
        <description>Counts the number of times the product whitespace has been run on the account</description>
        <inlineHelpText>Counts the number of times the product whitespace has been run on the account</inlineHelpText>
        <label>Product Whitespace Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Customer_Number__c</fullName>
        <label>Production Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Extension__c</fullName>
        <label>Reason for Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_creation__c</fullName>
        <inlineHelpText>Marketing attribute</inlineHelpText>
        <label>Reason for creation</label>
        <picklist>
            <picklistValues>
                <fullName>APP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WOPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Developer_Name__c</fullName>
        <description>This formula field will show the developer name of the record type.</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_on_Robinsonlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered on Robinsonlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Country__c</fullName>
        <label>Registration Country</label>
        <picklist>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Replacement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Additional Private Person attribute</inlineHelpText>
        <label>Replacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Agent_Customer_Responsible__c</fullName>
        <label>Retail Agent Customer Responsible</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Agent_Email_Address__c</fullName>
        <label>Retail Agent Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Retail_Agent_Fax_Number__c</fullName>
        <label>Retail Agent Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Retail_Agent_Phone_Number__c</fullName>
        <label>Retail Agent Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Retail_Partner_ID__c</fullName>
        <label>Retail Partner ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Segment__c</fullName>
        <label>Retail Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Group__c</fullName>
        <description>Account Group in ERP</description>
        <label>SAP Account Group</label>
        <picklist>
            <picklistValues>
                <fullName>TBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STRAS__c</fullName>
        <label>STRAS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Mode__c</fullName>
        <formula>CASE( $User.Sales_Area1__c, 
&quot;1000&quot;, PDK_BE_Sales_Mode__c , 
&quot;FO91&quot;, ME_SE_Sales_Mode__c , 
&quot;3670&quot;, LO_FI_Sales_Mode__c , 
&quot;LO NO&quot;, LO_NO_Sales_Mode__c , 
&quot;0540&quot;, LO_DK_Sales_Mode__c , 
&quot;FO92&quot;, LO_SE_Sales_Mode__c , 
&quot;0630&quot;, LO_FI_DPD_Sales_Mode__c , 
&quot;4000&quot;, PDK_LO_Sales_Mode__c , 
&quot;You don&apos;t have a Sales Area&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Sales Mode for the sales area of the person looking at the account</inlineHelpText>
        <label>Sales Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <label>Sales Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation_ID__c</fullName>
        <label>Salutation ID</label>
        <picklist>
            <picklistValues>
                <fullName>TBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Search_for_IDs__c</fullName>
        <description>Populated by workflow, a concatenation of all IDs that PostNord want to search, delimted by &quot;+&quot;</description>
        <label>Search for IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if  the customer has a secret adress, Only relevant for MOD validated private customers in DK</description>
        <label>Secret Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <description>Compressed version of the account name to assist fuzzy searching</description>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Should_Have_VSU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should Have VSU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Startdatum__c</fullName>
        <label>Startdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Store_Owner__c</fullName>
        <label>Store Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <formula>CASE( $User.Sales_Area1__c, 
&quot;1000&quot;, PDK_BE_Sub_Segment__c , 
&quot;FO91&quot;, ME_SE_Sub_Segment__c , 
&quot;3670&quot;, LO_FI_Sub_Segment__c , 
&quot;LO NO&quot;, LO_NO_Sub_Segment__c , 
&quot;0540&quot;, LO_DK_Sub_Segment__c ,
&quot;FO92&quot;, LO_SE_Sub_Segment__c , 
&quot;0630&quot;, LO_FI_DPD_Sub_Segment__c , 
&quot;4000&quot;, PDK_LO_Sub_Segment__c , 
&quot;You don&apos;t have a Sales Area&quot;)</formula>
        <inlineHelpText>This is the Sub Segment for the sales area of the person looking at the account</inlineHelpText>
        <label>Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRG_Export_Customer_Number__c</fullName>
        <description>TRG Export Customer Number for LO DK</description>
        <label>TRG Export Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRG_Groupage_Customer_Number__c</fullName>
        <description>TRG Groupage Customer Number for LO DK</description>
        <label>TRG Groupage Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRG_Pallets_Customer_Number__c</fullName>
        <description>TRG Pallets Customer Number for LO DK</description>
        <label>TRG Pallets Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Segment__c</fullName>
        <formula>CASE( $User.Sales_Area1__c,
&quot;1000&quot;,  PDK_BE_Top_Segment__c , 
&quot;FO91&quot;,  ME_SE_Top_Segment__c , 
&quot;3670&quot;,  LO_FI_Top_Segment__c , 
&quot;LO NO&quot;, LO_NO_Top_Segment__c , 
&quot;0540&quot;, LO_DK_Top_Segment__c ,
&quot;FO92&quot;,  LO_SE_Top_Segment__c ,
&quot;0630&quot;,  LO_FI_DPD_Top_Segment__c , 
&quot;4000&quot;,  PDK_LO_Top_Segment__c , 
&quot;You don&apos;t have a Sales Area&quot;)</formula>
        <inlineHelpText>This is the Top Segment for the sales area of the person looking at the account</inlineHelpText>
        <label>Top Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turnover__c</fullName>
        <label>Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <label>Verified</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visiting_Address_City__c</fullName>
        <label>Visiting Address City</label>
        <length>72</length>
        <type>Text</type>
    </fields>
</CustomObject>